--- a/styles/cv.css
+++ b/styles/cv.css
@@ -117,6 +117,13 @@ body {
   color: #03a9f4;
 }
 
+.icon {
+  display: inline-block;
+  width: 30px;
+  font-size: 18px;
+  color: #03a9f4;
+}
+
 .contactInfo ul li span {
   color: #fff;
   font-weight: 300;
